in the middle of fixing left column spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -369,7 +369,7 @@ h3 {
 }
 .left_column table {
 	border-style: none;
-	width: 100px;
+	width: 180px;
 }
 .left_column table th{
 	width: 180px;
